--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,9 +19,7 @@
   </style>
 </head>
 
-<body class="bg-gray-800 font-sans font-bold">
-    <div class="flex justify-center items-center h-screen">
-        <div class="container w-full max-w-xl ">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 
 
